# pylibfreenect2-py310

./: CLAUDE.md  INSTALL.md  OPTIMIZATION_INSTRUCTIONS.md  README.md  benchmark_performance.py  build_original.bat  pyproject.toml  setup.cfg  setup.py  test_github_install.py
pylibfreenect2/: __init__.py  libfreenect2.pyx
